update: tech stack; fix: nav theme alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,6 +71,7 @@ html, body, #__next {
   flex-direction: column;
   justify-content: center;
   margin-left: 35px;
+  margin-bottom: 5px;
   cursor: pointer;
 }
 
